<resources>
    <string name="app_name">Quiz4KK</string>
    <string name="q1">Reduction entails gaining electrons</string>
    <string name="q2">0.00760 has 3 sig figs</string>
    <string name="q3">There are 6.02 * 10^23 moles in a gram of Carbon</string>
    <string name="q4">Water boils at a higher temperature at higher altitudes</string>
    <string name="q5">Oxygen is a diatomic molecule</string>
    <string name="q6">Na-Cl bond is covalent</string>
    <string name="q7">Ionic bonds are weaker than covalent bonds</string>
    <string name="q8">The Liter is the SI base unit of volume</string>
    <string name="q9">The standard units for density of a liquid are g/mL</string>
    <string name="q10">The standard units for density of a gas are g/mL</string>
    <string name="q1_hint">Adding an electron decreases the overall charge</string>
    <string name="q2_hint">Leading 0s are not sig figs</string>
    <string name="q3_hint">A mole of carbon has 6.02 * 10^23 atoms</string>
    <string name="q4_hint">Boiling point increases with more air pressure</string>
    <string name="q5_hint">An oxygen molecule\'s mass is twice that of an oxygen atom</string>
    <string name="q6_hint">Na is a metal while Cl is a nonmetal</string>
    <string name="q7_hint">Covalent bonds share electrons, unlike ionic bonds</string>
    <string name="q8_hint">Does volume have a base unit, or is it derived?</string>
    <string name="q9_hint">Water\'s density with proper units is 1.00</string>
    <string name="q10_hint">Gases are much more spread out than liquids</string>
    <string name="no_hint">No hint available!</string>
    <string name="score_label">Score:</string>
    <string name="high_score_label">High Score:</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="hint_button">Hint</string>
    <string name="confirm">Are you sure?</string>
    <string name="show_answer_button">Show</string>
    <string name="close_hint_button">Close</string>
    <string name="answer">Answer here</string>
    <string name="word_question">Question</string>
    <string name="finish_button">Done</string>
    <string name="high_score_tag">highScore</string>
    <string name="new_score_tag">newScore</string>
    <string name="play_again_button">Retry</string>
    <string name="quit_button">Quit</string>
    <string name="q_hint_tag">qHint</string>
    <string name="name_label">Name:</string>
    <string name="submit">Submit</string>
    <string name="def_name">name</string>
</resources>
