<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/lightBlue">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:layout_margin="10dp"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/name_space"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_btn_glow"/>


    </LinearLayout>


    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="0" />


    <TextView
        android:id="@+id/question_text_view"
        android:textStyle="italic"
        android:fontFamily="serif"
        android:textColor="@color/red"
        android:textSize="40dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:layout_margin="10dp"
            android:enabled="false"
            android:background="@drawable/rounded_btn"/>

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            android:layout_margin="10dp"
            android:enabled="false"
            android:background="@drawable/rounded_btn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/next_button"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_btn"/>

        <Button
            android:id="@+id/hint_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_button"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_btn"/>

    </LinearLayout>

    <TextView
        android:id="@+id/question_number"
        android:textColor="@color/red"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/score_text"
        android:textColor="@color/red"
        android:textSize="40dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_label"
        android:fontFamily="serif"/>


</LinearLayout>