<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rounded_bg_green"
    android:gravity="center">

    <TextView
        android:id="@+id/score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/score_label"
        android:textSize="32dp"
        android:textStyle="bold"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/workshopParticipants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/play_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn"
            android:text="@string/play_again_button"
            android:layout_marginBottom="24dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="16dp"/>

        <Button
            android:id="@+id/quit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn"
            android:text="@string/quit_button"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"/>

    </LinearLayout>

</LinearLayout>