<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rounded_bg_red"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/confirm"
        android:textSize="32dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/show_answer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn"
            android:text="@string/show_answer_button"
            android:layout_marginBottom="24dp"
            android:layout_marginRight="8dp"/>

        <Button
            android:id="@+id/close_hint_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn"
            android:text="@string/close_hint_button"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text=""
        android:textSize="32dp"
        android:textAlignment="center"
        android:visibility="gone"/>


</LinearLayout>